# ffi-utils

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: master.yml  pr.yml
scripts/: clippy
src/: b64.rs  bindgen_utils.rs  callback.rs  catch_unwind.rs  java.rs  lib.rs  macros.rs  repr_c.rs  result.rs  string.rs  test_utils.rs  vec.rs
tests/: lib.rs
