[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "FFI utilities"
documentation = "https://docs.rs/ffi_utils"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "ffi_utils"
readme = "README.md"
repository = "https://github.com/maidsafe/ffi_utils"
version = "0.12.0"

edition = "2018"

[dependencies]
base64 = "~0.9.0"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
regex = "~0.2.5"
serde = "~1.0.27"
serde_derive = "~1.0.27"
unwrap = "~1.2.0"
walkdir = "~2.0.1"

[dev-dependencies]
rand = "~0.4.2"

[features]
# Includes utilities for dealing with the JNI runtime.
java = ["jni"]
