[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "FFI utilities"
documentation = "https://docs.rs/sn_ffi_utils"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "sn_ffi_utils"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_ffi_utils"
version = "0.18.2"
edition = "2018"

[dependencies]
base64 = "~0.9.0"
log = "~0.4.1"
regex = "~0.2.5"
serde = "1.0.27"
serde_derive = "1.0.27"
unwrap = "1.2.0"
walkdir = "2.3.1"

  [dependencies.jni]
  version = "~0.12.0"
  optional = true

[dev-dependencies]
rand = "0.7.3"

[features]
java = [ "jni" ]
